remove unnecessary symbols

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Chat2DB: chat everything with your database<</h1>
+            <h1 class="title is-1 publication-title">Chat2DB: chat everything with your database</h1>
             <div class="is-size-5 publication-authors">
               <h3>Comming soon. Please be patient</h3>
               <!-- Paper authors -->
